# spix

./: .appveyor.yml  .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
examples/Basic/: CMakeLists.txt  main.cpp  main.qml
examples/BasicStandalone/: CMakeLists.txt  README.md  main.cpp  main.qml
examples/GTest/: CMakeLists.txt  main.cpp  main.qml
examples/GTestTypeFinder/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
examples/ListGridView/: CMakeLists.txt  main.cpp  main.qml
examples/QtTest/: CMakeLists.txt  tst_test.cpp
examples/RepeaterLoader/: CMakeLists.txt  main.cpp  main.qml  main_gtest.cpp  show_banana.qml
examples/qtwidgets/FormExample/: CMakeLists.txt  main.cpp
examples/qtwidgets/GTest/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt
lib/core/cmake/: SpixConfig.cmake.in
lib/core/include/Spix/CommandExecuter/: CommandEnvironment.h  CommandExecuter.h
lib/core/include/Spix/Commands/: Command.h
lib/core/include/Spix/Data/: PasteboardContent.h  Variant.h
lib/core/include/Spix/Scene/: Events.h  Item.h  Scene.h
lib/core/src/: TestServer.cpp
lib/core/src/CommandExecuter/: CommandExecuter.cpp  ExecuterState.cpp
lib/core/src/Commands/: ClickOnItem.cpp  ClickOnItem.h  Command.cpp  CustomCmd.cpp  CustomCmd.h  DragBegin.cpp  DragEnd.cpp  DropFromExt.h  GetBoundingBox.cpp  GetProperty.cpp  GetProperty.h  InvokeMethod.cpp  InvokeMethod.h  Wait.cpp  Wait.h
lib/core/src/Data/: ItemPath.cpp
lib/core/src/Scene/Mock/: MockEvents.cpp  MockEvents.h  MockItem.h  MockScene.h
lib/core/tests/: CMakeLists.txt
lib/core/tests/unittests/Data/: ItemPath_test.cpp
lib/include/Spix/: AnyRpcServer.h  QtQmlBot.h  TestServer.h
lib/include/Spix/Data/: Geometry.h  ItemPath.h  ItemPathComponent.h  ItemPosition.h  PasteboardContent.h
lib/include/Spix/Events/: KeyCodes.h  MouseButtonCodes.h  QtEventIdSniffer.h
lib/scenes/Qt/: CMakeLists.txt
lib/scenes/Qt/cmake/: SpixQtSceneConfig.cmake.in
lib/scenes/Qt/include/SpixQtScene/: QtQmlBot.h  QtScene.h
lib/scenes/Qt/src/: QtEvents.cpp  QtEvents.h  QtItem.h  QtItemTools.cpp  QtQmlBot.cpp  QtScene.cpp
lib/scenes/Qt/src/Utils/: DebugDump.cpp
lib/scenes/Qt/tests/: CMakeLists.txt
lib/scenes/Qt/tests/unittests/: CMakeLists.txt
lib/src/: AnyRpcServer.cpp  QtQmlBot.cpp  TestServer.cpp
lib/src/CommandExecuter/: CommandEnvironment.cpp  CommandEnvironment.h  CommandExecuter.cpp  CommandExecuter.h  ExecuterState.cpp  ExecuterState.h
lib/src/Commands/: ClickAndHoldOnItem.cpp  ClickAndHoldOnItem.h  ClickOnItem.cpp  ClickOnItem.h  Command.cpp  Command.h  CustomCmd.cpp  CustomCmd.h  DragBegin.cpp  DragBegin.h  DragEnd.cpp  DragEnd.h  DropFromExt.cpp  DropFromExt.h  EnterKey.cpp  EnterKey.h  ExistsAndVisible.cpp  ExistsAndVisible.h  GetBoundingBox.cpp  GetBoundingBox.h  GetProperty.cpp  GetProperty.h  GetTestStatus.cpp  GetTestStatus.h  InputText.cpp  InputText.h  InvokeMethod.cpp  InvokeMethod.h  Quit.cpp  Quit.h  Screenshot.cpp  Screenshot.h  ScreenshotBase64.cpp  ScreenshotBase64.h  ScreenshotRemote.cpp  ScreenshotRemote.h  SearchItem.cpp  SearchItem.h  SetProperty.cpp  SetProperty.h  (+6 more)
lib/src/Data/: Geometry.cpp  ItemPath.cpp  ItemPathComponent.cpp  PasteboardContent.cpp
lib/src/Scene/: Events.h  Item.cpp  Item.h  Scene.h
lib/src/Scene/Mock/: MockEvents.cpp  MockEvents.h  MockItem.cpp  MockItem.h  MockScene.cpp  MockScene.h
lib/src/Scene/Qt/: FindQtItem.cpp  FindQtItem.h  QtEventFilter.cpp  QtEventFilter.h  QtEvents.cpp  QtEvents.h  QtItem.cpp  QtItem.h  QtItemTools.cpp  QtItemTools.h  QtScene.cpp  QtScene.h
lib/src/Utils/: AnyRpcFunction.h  AnyRpcUtils.h  DebugDump.cpp  DebugDump.h  PathParser.cpp  QtEventRecorder.cpp  QtEventRecorder.h
lib/tests/: CMakeLists.txt
lib/tests/unittests/CommandExecuter/: CommandExecuter_test.cpp  ExecuterState_test.cpp
lib/tests/unittests/Commands/: ClickOnItem_test.cpp  DropFromExt_test.cpp  GetProperty_test.cpp
lib/tests/unittests/Data/: ItemPathComponent_test.cpp  ItemPath_test.cpp  ItemPosition_test.cpp  PasteboardContent_test.cpp
lib/tests/unittests/Scene/Qt/: PickClick_test.cpp  QtItemTools_test.cpp  QtItem_test.cpp
lib/tests/unittests/Utils/: AnyRpcFunction_test.cpp  AnyRpcUtils_test.cpp
libs/Core/tests/: CMakeLists.txt
libs/Core/tests/CommandExecuter/: CommandExecuter_test.cpp  ExecuterState_test.cpp
libs/Core/tests/Commands/: ClickOnItem_test.cpp  DropFromExt_test.cpp  GetProperty_test.cpp
libs/Core/tests/Data/: ItemPathComponent_test.cpp  PasteboardContent_test.cpp
libs/Core/tests/Utils/: AnyRpcFunction_test.cpp  AnyRpcUtils_test.cpp  PathParser_test.cpp
libs/Scenes/QtQuick/: CMakeLists.txt
libs/Scenes/QtQuick/cmake/: SpixQtQuickConfig.cmake.in
libs/Scenes/QtQuick/src/: FindQtItem.cpp  FindQtItem.h  QtEvents.cpp  QtEvents.h  QtItem.cpp  QtItemTools.h  QtQmlBot.cpp  QtScene.cpp  QtScene.h
libs/Scenes/QtQuick/tests/: CMakeLists.txt  QtItemTools_test.cpp  QtItem_test.cpp
libs/Scenes/QtWidgets/: CMakeLists.txt
libs/Scenes/QtWidgets/cmake/: SpixQtWidgetsConfig.cmake.in
libs/Scenes/QtWidgets/src/: FindQtWidget.cpp  FindQtWidget.h  QtWidgetsBot.cpp  QtWidgetsEvents.cpp  QtWidgetsEvents.h  QtWidgetsItem.cpp  QtWidgetsItem.h  QtWidgetsItemTools.cpp  QtWidgetsItemTools.h  QtWidgetsScene.cpp  QtWidgetsScene.h
libs/Scenes/QtWidgets/tests/: CMakeLists.txt  QtWidgetsItemTools_test.cpp  QtWidgetsItem_test.cpp  QtWidgetsTestUtils.h
libs/core/: CMakeLists.txt
libs/core/src/CommandExecuter/: CommandExecuter.cpp
libs/core/src/Commands/: ClickOnItem.cpp  DragBegin.cpp  DragBegin.h  DragEnd.h  ExistsAndVisible.h  InputText.cpp  InputText.h  Quit.h  Screenshot.cpp  Screenshot.h  ScreenshotBase64.h
libs/core/tests/: CMakeLists.txt  unittests_main.cpp
libs/core/tests/CommandExecuter/: CommandExecuter_test.cpp
libs/core/tests/Commands/: ClickOnItem_test.cpp  DropFromExt_test.cpp  GetProperty_test.cpp
libs/qtquick/: CMakeLists.txt
libs/qtquick/cmake/: SpixQtQuickConfig.cmake.in
libs/qtquick/tests/: CMakeLists.txt
libs/qtquick/tests/Qt/: QtItem_test.cpp
(+116 files in other folders)
